--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,10 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-<key>NSPhotoLibraryUsageDescription</key>
-<string>$(PRODUCT_NAME)photos description.</string>
-<key>NSCameraUsageDescription</key>
-<string>$(PRODUCT_NAME) would like to access camera!.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -49,5 +45,12 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+    <string>PhotoSaver needs access to your camera to allow you to take photos directly within the app.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>PhotoSaver needs access to your photo library to display and manage your photos.</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>PhotoSaver needs access to save images to your photo library.</string>
+
 </dict>
 </plist>
