--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   get: ^4.6.6
-  google_fonts: ^6.2.1
+  google_fonts: ^4.0.4
   image_picker: ^1.1.2
-  http: ^1.2.2
+  http: ^0.13.3
   flex_color_picker: ^3.5.1
+  gallery_saver: ^2.1.0
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
