--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,12 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   get: ^4.6.6
-  google_fonts: ^4.0.4
+  google_fonts: ^6.2.1
   image_picker: ^1.1.2
-  http: ^0.13.3
+  http: ^1.2.2
   flex_color_picker: ^3.5.1
-  gallery_saver: ^2.1.0
+  flutter_file_downloader: ^2.0.0
   path_provider: ^2.1.4
+  permission_handler: ^11.3.1
+  image: ^4.2.0
 
 dev_dependencies:
   flutter_test:
